# MIMIC

./: .buildinfo  .gitignore  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  __init__.py  authors.html  base_model.py  clustering.py  contributing.html  environment.yml  environment_windows.yml  examples-Stein.ipynb  examples-mcmc-maria.ipynb  examples-mcmc-ode.ipynb  examples-mcmc.ipynb  examples-sde-maria.ipynb  examples-simulated.ipynb  examples.html  examples_auto.html  genindex.html  history.html  index.html  installation.html  mimic.data_imputation.html  mimic.html  mimic.model_infer.html  mimic.model_simulate.html  mimic.utilities.html  model_nopert.txt  model_pert.txt  model_sde_nopert.txt  modules.html  multi-omics-v2.ipynb  objects.inv  py-modindex.html  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md
BVAR/: VARinfer.py  VARsim.py  VARsim2.py  __init__.py  parametersS.json  simulated_data.csv  utils.py
MIMIC.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
OED/: MPC.py  MPC_transplant.py  RL_params.json  gMLV_params.json  param_error.py  simulate.py  test_methods.py  train_RT3D.py  xdot.py  xdot_transplant.py
RNN/: RNN.py  RNN2.py  RNN_demo.py  param_scan.sh  plot_data_inv.py
VAR/: VARinfer.py  VARsim.ipynb  VARsim.py  VARsim2.py  __init__.py  utils.py
_modules/: index.html
_sources/: examples.rst.txt  mimic.rst.txt
base_class/: __init__.py  base_class.py
base_model/: base_model.py
clustering/: clustering_Y.py  clustering_trimmed.py
data/: F.csv  Stein_example_F.csv  Y.csv  clark_2020.csv  data-info.csv  (+4 more)
(+326 files in other folders)
