[tool.poetry]
name = "mimic"
version = "0.1.0"
description = "Modelling and Inference of MICrobiomes Project (MIMIC) is a Python package dedicated to simulate, model, and predict microbial communities interactions and dynamics. It is designed to be a flexible and easy-to-use tool for researchers and practitioners in the field of microbial ecology and microbiome research."
authors = ["Pedro Fontanarrosa <pfontanarrosa@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
scipy = "*"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
pymc3 = "*"
arviz = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
